--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2imd-webtech3-lab1</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
-<link rel="stylesheet" type="text/css" href="screen.css">
+<link rel="stylesheet" type="text/css" href="css/screen.css">
 </head>
 <body>
 
