--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/screen.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="js/javascript.js"></script>
 </head>
 <body>
 
